--- a/styles/base.css
+++ b/styles/base.css
@@ -78,6 +78,12 @@ a {
   }
 }
 
+svg {
+  @media print {
+    display: none;
+  }
+}
+
 summary {
   @media screen {
     cursor: pointer;
@@ -97,12 +103,12 @@ tr {
 
 th {
   text-align: left;
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-  font-weight: normal;
 
   @media screen {
+    font-size: 0.9rem;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    font-weight: normal;
     border-bottom: 1px solid var(--light-color);
 
     @media screen and (prefers-color-scheme: light) {
@@ -130,6 +136,10 @@ tr:not(:first-child) th {
     position: absolute;
     width: 1px;
     white-space: nowrap;
+  }
+
+  @media print {
+    display: none;
   }
 }
 
@@ -395,9 +405,7 @@ nav {
   }
 
   @media print {
-    body:not(:has(#about)) & {
-      display: none;
-    }
+    display: none;
   }
 }
 
@@ -499,10 +507,6 @@ dialog {
     --light-color: currentColor;
   }
 
-  @media print {
-    display: none;
-  }
-
   &:has(h1:focus-visible) {
     outline: 4px dashed white;
     outline-offset: 1px;
@@ -511,41 +515,47 @@ dialog {
       outline: 4px dashed black;
     }
   }
+
+  & .aria-role__details p {
+    margin: 0;
+
+    & + p {
+      margin-top: 1rem;
+    }
+  }
 }
 
 .dialog__header {
-  display: flex;
-  margin-bottom: 1rem;
+  @media screen {
+    display: flex;
+    margin-bottom: 1rem;
 
-  &:has(.dialog__close-button) {
-    flex-direction: row-reverse;
-    gap: 1rem;
+    &:has(.dialog__close-button) {
+      flex-direction: row-reverse;
+      gap: 1rem;
 
-    @media screen and (max-width: 320px) {
-      flex-wrap: wrap;
+      @media screen and (max-width: 320px) {
+        flex-wrap: wrap;
+      }
     }
   }
 }
 
 .dialog__header__info {
-  @media screen {
-    flex: 1;
-    display: grid;
-    place-items: flex-start;
-    column-gap: 0.5rem;
-    row-gap: 1rem;
-    margin-bottom: 0.5rem;
-    margin-top: 1rem;
-  }
+  flex: 1;
+  display: grid;
+  place-items: flex-start;
+  column-gap: 0.5rem;
+  row-gap: 1rem;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
 }
 
 .dialog__tags {
-  @media screen {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    margin: 0;
-  }
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin: 0;
 }
 
 .dialog__tag {
@@ -583,7 +593,7 @@ dialog {
     margin: 0;
     font-weight: normal;
     font-size: 2.25rem;
-    line-height: 0.85;
+    line-height: 1.125;
 
     @media screen and (max-width: 320px) {
       font-size: 1.75rem;
@@ -592,18 +602,18 @@ dialog {
 }
 
 .dialog__heading__container {
-  @media screen {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dialog__links {
-  @media screen {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+
+  @media print {
+    display: none;
   }
 }
 
@@ -643,6 +653,10 @@ dialog {
   & svg {
     stroke: currentColor;
     stroke-width: 2px;
+  }
+
+  @media print {
+    display: none;
   }
 }
 
