--- a/styles/base.css
+++ b/styles/base.css
@@ -119,6 +119,8 @@ summary {
     min-height: 100%;
     font: 18px system-ui, sans-serif;
     font: -apple-system-body;
+    --safe-area-left: max(env(safe-area-inset-left, 0px), 1rem);
+    --safe-area-right: max(env(safe-area-inset-right, 0px), 1rem);
     --header-background-color: #252525;
     --page-background-color: black;
     color-scheme: dark;
@@ -155,12 +157,14 @@ body {
   @media screen and (max-width: calc(48rem - 1px)) {
     display: grid;
     row-gap: 1rem;
-    grid-template-columns: 1rem 1fr 1rem;
+    grid-template-columns: var(--safe-area-left) 1fr var(--safe-area-right);
   }
 
   @media screen and (min-width: 48rem) {
     display: grid;
-    grid-template-columns: 1rem 15rem 1fr 1rem;
+    grid-template-columns: var(--safe-area-left) 15rem 1fr var(
+        --safe-area-right
+      );
     grid-template-rows: 100vh 1fr;
     grid-template-rows: 100dvh 1fr;
     column-gap: 1rem;
@@ -168,7 +172,11 @@ body {
 
   @media screen and (min-width: 72rem) {
     column-gap: 0;
-    grid-template-columns: 1fr 1rem 1rem 15rem 1rem 43rem 1rem 1rem 1fr;
+    grid-template-columns:
+      1fr var(--safe-area-left) 1rem 15rem 1rem 43rem 1rem var(
+        --safe-area-right
+      )
+      1fr;
   }
 }
 
@@ -208,6 +216,8 @@ body {
     background-color: var(--header-background-color);
     place-content: center;
     padding: 1rem;
+    padding-left: var(--safe-area-left);
+    padding-right: var(--safe-area-right);
     pointer-events: auto;
     border-bottom: 2px solid transparent;
 
