--- a/styles/base.css
+++ b/styles/base.css
@@ -9,21 +9,13 @@
 }
 
 :focus-visible {
-  outline: 4px dashed white;
+  outline: 4px dashed black;
   outline-offset: 1px;
-
-  @media (prefers-color-scheme: light) {
-    outline: 4px dashed black;
-  }
 }
 
 :where(.dialog) a {
   @media screen {
-    color: var(--light-color);
-
-    @media screen and (prefers-color-scheme: light) {
-      color: var(--dark-color);
-    }
+    color: var(--dark-color);
 
     &:focus-visible {
       outline-offset: 4px;
@@ -48,24 +40,6 @@ ul {
       padding: 0;
       margin: 0;
     }
-  }
-}
-
-:where(a:any-link) {
-  @media screen and (prefers-color-scheme: dark) {
-    color: rgb(158, 158, 255);
-  }
-}
-
-:where(a:visited) {
-  @media screen and (prefers-color-scheme: dark) {
-    color: rgb(288, 173, 240);
-  }
-}
-
-:where(a:active) {
-  @media screen and (prefers-color-scheme: dark) {
-    color: rgb(255, 158, 158);
   }
 }
 
@@ -112,28 +86,18 @@ summary {
 :root {
   @media screen {
     min-height: 100%;
-    font: 18px system-ui, sans-serif;
+    font: 20px system-ui, sans-serif;
     font: -apple-system-body;
     --safe-area-left: max(env(safe-area-inset-left, 0px), 1rem);
     --safe-area-right: max(env(safe-area-inset-right, 0px), 1rem);
     --header-background-color: #252525;
-    --page-background-color: black;
-    color-scheme: dark;
+    --page-background-color: white;
   }
 
   @media (max-width: 320px) {
     -webkit-hyphens: auto;
     hyphens: auto;
     overflow-wrap: anywhere;
-  }
-
-  @media screen and (prefers-color-scheme: light) {
-    --page-background-color: white;
-    color-scheme: light;
-  }
-
-  @media print {
-    color-scheme: light;
   }
 }
 
@@ -157,9 +121,7 @@ body {
 
   @media screen and (min-width: 48rem) {
     display: grid;
-    grid-template-columns: var(--safe-area-left) 15rem 1fr var(
-        --safe-area-right
-      );
+    grid-template-columns: var(--safe-area-left) 25ch 1fr var(--safe-area-right);
     grid-template-rows: 100vh 1fr;
     grid-template-rows: 100dvh 1fr;
     column-gap: 1rem;
@@ -168,7 +130,7 @@ body {
   @media screen and (min-width: 72rem) {
     column-gap: 0;
     grid-template-columns:
-      1fr var(--safe-area-left) 1rem 15rem 1rem 43rem 1rem var(
+      1fr var(--safe-area-left) 1rem 25ch 1rem calc(58rem - 25ch) 1rem var(
         --safe-area-right
       )
       1fr;
@@ -214,11 +176,6 @@ body {
     padding-left: var(--safe-area-left);
     padding-right: var(--safe-area-right);
     pointer-events: auto;
-    border-bottom: 2px solid transparent;
-
-    @media (forced-colors: active) {
-      border-bottom-color: currentColor;
-    }
   }
 }
 
@@ -235,8 +192,6 @@ menu-button {
   font: inherit;
   font-size: 1.125rem;
   line-height: 1;
-  background-color: var(--header-background-color);
-  color: white;
   padding: 0.125rem 0.5rem;
   margin: 0;
   border: 0;
@@ -248,6 +203,8 @@ menu-button {
   max-width: min-content;
   align-self: center;
   justify-self: center;
+  background-color: white;
+  color: black;
 
   @media screen and (max-width: 320px) {
     flex-wrap: wrap;
@@ -267,37 +224,17 @@ menu-button {
   }
 
   &:hover {
-    background-color: white;
-    color: black;
+    background-color: var(--header-background-color);
+    color: white;
   }
 
   &[aria-expanded="true"] {
-    background-color: white;
-    color: black;
+    background-color: var(--header-background-color);
+    color: white;
 
     &:hover {
-      background-color: var(--header-background-color);
-      color: white;
-    }
-  }
-
-  @media screen and (prefers-color-scheme: light) {
-    background-color: white;
-    color: black;
-
-    &:hover {
-      background-color: var(--header-background-color);
-      color: white;
-    }
-
-    &[aria-expanded="true"] {
-      background-color: var(--header-background-color);
-      color: white;
-
-      &:hover {
-        background-color: white;
-        color: black;
-      }
+      background-color: white;
+      color: black;
     }
   }
 
@@ -327,11 +264,16 @@ menu-button {
   @media screen {
     margin: 0;
     font-size: 0.9rem;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.25ch;
     text-transform: uppercase;
+    font-weight: bold;
     text-align: center;
     line-height: 1.5;
     color: white;
+  }
+
+  &:focus-visible {
+    outline: 4px dashed white;
   }
 }
 
@@ -457,27 +399,45 @@ main {
   }
 }
 
-.dialog,
+body:has(.dialog),
 .nav__list-item {
   --base-saturation: 100%;
-  --lightest-color-lightness: 93.5%;
+  --lightest-color-lightness: 97.5%;
+  --lighter-color-lightness: 93.5%;
   --light-color-lightness: 85%;
-  --dark-color-lightness: 15%;
-  --darkest-color-lightness: 7.5%;
+  --medium-color-lightness: 33.3%;
+  --dark-color-lightness: 17.5%;
+  --darker-color-lightness: 7.5%;
+  --darkest-color-lightness: 2.5%;
   --lightest-color: hsl(
     var(--base-hue),
     var(--base-saturation),
     var(--lightest-color-lightness)
+  );
+  --lighter-color: hsl(
+    var(--base-hue),
+    var(--base-saturation),
+    var(--lighter-color-lightness)
   );
   --light-color: hsl(
     var(--base-hue),
     var(--base-saturation),
     var(--light-color-lightness)
   );
+  --medium-color: hsl(
+    var(--base-hue),
+    var(--base-saturation),
+    var(--medium-color-lightness)
+  );
   --dark-color: hsl(
     var(--base-hue),
     var(--base-saturation),
     var(--dark-color-lightness)
+  );
+  --darker-color: hsl(
+    var(--base-hue),
+    var(--base-saturation),
+    var(--darker-color-lightness)
   );
   --darkest-color: hsl(
     var(--base-hue),
@@ -489,34 +449,29 @@ main {
 .nav__list-item {
   @media screen {
     display: block;
-    color: white;
-    background-color: var(--dark-color);
-    border: 2px solid var(--light-color);
     border-radius: 0.5rem;
 
-    @media (prefers-color-scheme: light) {
-      color: black;
-      background-color: var(--light-color);
-      border-color: var(--dark-color);
+    &:has(.nav__list-item__details:not([open])) {
+      border: 2px solid var(--medium-color);
+      color: var(--darkest-color);
+      background-color: var(--lightest-color);
+    }
+
+    &:has(.nav__list-item__details[open]) {
+      border: 2px solid var(--medium-color);
+      color: var(--darkest-color);
+      background-color: var(--lightest-color);
     }
 
     &:has(.nav__list-item__summary:hover):has(
         .nav__list-item__details:not([open])
       ) {
-      background: var(--light-color);
-      border-color: var(--darkest-color);
-
-      @media (prefers-color-scheme: light) {
-        background-color: var(--dark-color);
-        border-color: var(--darkest-color);
-      }
+      color: black;
+      border-color: var(--dark-color);
+      background-color: var(--dark-color);
 
       & .nav__list-item__summary {
-        color: black;
-
-        @media (prefers-color-scheme: light) {
-          color: white;
-        }
+        color: white;
       }
     }
   }
@@ -549,30 +504,20 @@ main {
 .nav__list-item__sublist-item__link {
   @media screen {
     display: block;
-    color: var(--lightest-color);
     padding: 0.75rem;
     font-weight: bold;
-    background-color: var(--darkest-color);
-    border: 2px solid var(--light-color);
     border-radius: 0.5rem;
     word-break: break-word;
-
-    @media (prefers-color-scheme: light) {
-      color: var(--darkest-color);
-      background-color: var(--lightest-color);
-      border-color: var(--dark-color);
-    }
+    color: var(--lighter-color);
+    background-color: var(--darker-color);
+    border: 2px solid var(--medium-color);
+    color: var(--darkest-color);
+    background-color: var(--page-background-color);
 
     &:hover {
-      color: var(--darkest-color);
-      background-color: var(--lightest-color);
-      border-color: var(--light-color);
-
-      @media (prefers-color-scheme: light) {
-        color: var(--lightest-color);
-        background-color: var(--dark-color);
-        border-color: var(--darkest-color);
-      }
+      color: white;
+      background-color: var(--dark-color);
+      border-color: var(--dark-color);
     }
   }
 }
@@ -581,13 +526,8 @@ main {
   @media screen {
     line-height: 1.5;
     border-radius: 0.5rem;
-    background-color: var(--darkest-color);
-    border: 2px solid var(--light-color);
-
-    @media screen and (prefers-color-scheme: light) {
-      background: var(--lightest-color);
-      border-color: var(--dark-color);
-    }
+    border: 2px solid var(--dark-color, black);
+    background-color: var(--page-background-color);
   }
 
   @media screen and (max-width: calc(48rem - 1px)) {
@@ -608,8 +548,6 @@ main {
 
 .dialog:has(#overview) {
   @media screen {
-    --light-color: currentColor;
-
     &:has(h1:focus-visible) {
       outline: 4px dashed;
       outline-offset: 1px;
@@ -649,36 +587,24 @@ main {
 
 .dialog__tags {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   flex-wrap: wrap;
   margin: 0;
 }
 
 .dialog__tag {
   @media screen {
-    background-color: var(--light-color);
-    color: var(--dark-color);
     padding: 0.25rem 0.5rem;
     border-radius: 0.5rem;
     font-weight: bold;
     font-size: 0.8rem;
-    border: 2px solid transparent;
-
-    @media screen and (prefers-color-scheme: light) {
-      background-color: var(--dark-color);
-      color: var(--lightest-color);
-    }
+    border: 2px solid var(--dark-color);
+    background-color: var(--dark-color);
+    color: white;
 
     &:hover {
-      background-color: var(--darkest-color);
-      border-color: var(--light-color);
-      color: var(--light-color);
-
-      @media screen and (prefers-color-scheme: light) {
-        background-color: var(--lightest-color);
-        border-color: var(--dark-color);
-        color: var(--dark-color);
-      }
+      background-color: var(--lightest-color);
+      color: black;
     }
   }
 }
@@ -688,7 +614,7 @@ main {
     margin: 0;
     font-weight: normal;
     font-size: 2.25rem;
-    line-height: 1.125;
+    line-height: 1.25;
 
     @media screen and (max-width: 320px) {
       font-size: 1.75rem;
@@ -715,7 +641,6 @@ main {
 .dialog__close-button {
   margin: 0;
   padding: 0;
-  border: 2px solid var(--light-color);
   cursor: pointer;
   font: inherit;
   line-height: 1.75;
@@ -727,22 +652,13 @@ main {
   place-content: center;
   place-self: flex-start;
   aspect-ratio: 1;
-  color: var(--dark-color);
-  background-color: var(--light-color);
-
-  @media screen and (prefers-color-scheme: light) {
-    color: var(--light-color);
-    background-color: var(--dark-color);
-    border-color: var(--dark-color);
-  }
+  border: 2px solid var(--dark-color);
+  color: var(--lightest-color);
+  background-color: var(--dark-color);
 
   &:hover {
-    color: var(--light-color);
     background: none;
-
-    @media screen and (prefers-color-scheme: light) {
-      color: var(--dark-color);
-    }
+    color: var(--dark-color);
   }
 
   & svg {
@@ -760,15 +676,11 @@ main {
     margin: 0;
     font: inherit;
     font-size: 0.9rem;
-    font-weight: normal;
+    font-weight: bold;
     line-height: inherit;
     letter-spacing: 0.1rem;
     text-transform: uppercase;
-    border-bottom: 1px solid var(--light-color);
-
-    @media screen and (prefers-color-scheme: light) {
-      border-color: var(--dark-color);
-    }
+    border-bottom: 1px solid var(--dark-color);
   }
 }
 
