--- a/styles/base.css
+++ b/styles/base.css
@@ -188,7 +188,7 @@ body {
   }
 }
 
-menu-button {
+expansion-button {
   display: contents;
 }
 
@@ -601,6 +601,14 @@ body:has(.content),
   margin: 0;
 }
 
+.content__tag-container {
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .content__tag {
   @media screen {
     padding: 0.25rem 0.5rem;
@@ -611,9 +619,57 @@ body:has(.content),
     background-color: var(--dark-color);
     color: white;
 
+    @media screen and (min-width: 48rem) {
+      -webkit-hyphens: none;
+      hyphens: none;
+      overflow-wrap: initial;
+    }
+
     &:hover {
       background-color: var(--lightest-color);
       color: black;
+    }
+  }
+}
+
+.tooltip-toggle-button {
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  font: inherit;
+  border: none;
+  background: none;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  display: flex;
+}
+
+.tooltip__container {
+  @supports not selector(.tooltip:popover-open) {
+    display: none;
+  }
+
+  .tooltip {
+    &:not(:popover-open) {
+      display: none !important;
+    }
+
+    &:popover-open {
+      display: none;
+      padding: 0 1rem;
+      border-radius: 0.5rem;
+      background-color: var(--lightest-color);
+      border: 2px solid var(--dark-color);
+      color: black;
+      font-size: 0.8rem;
+      width: min(8rem, calc(100vw - var(--scrollbar-width) - 2rem));
+      position: absolute;
+      inset: 0;
+      margin: 0;
+      -webkit-hyphens: auto;
+      hyphens: auto;
+      overflow-wrap: anywhere;
     }
   }
 }
@@ -625,6 +681,7 @@ body:has(.content),
     font-weight: normal;
     font-size: 2.25rem;
     line-height: 1.25;
+    hyphenate-character: "";
 
     @media screen and (max-width: 320px) {
       font-size: 1.75rem;
