--- a/styles/base.css
+++ b/styles/base.css
@@ -90,15 +90,19 @@ summary {
 }
 
 :root {
-  font: 20px system-ui, sans-serif;
+  font-family: system-ui, sans-serif;
 
   @media screen {
-    min-height: 100%;
+    height: 100%;
+    display: flex;
+    place-items: stretch;
     font: -apple-system-body;
-    --safe-area-left: max(env(safe-area-inset-left, 0px), 1rem);
-    --safe-area-right: max(env(safe-area-inset-right, 0px), 1rem);
+    --safe-area-left: env(safe-area-inset-left, 0px);
+    --safe-area-right: env(safe-area-inset-right, 0px);
     --header-background-color: #252525;
     --page-background-color: white;
+    --header-height: calc(2rem + (1.25 * 1rem));
+    --sidebar-width: max(16rem, calc(2rem + 30ch));
   }
 
   @media (max-width: 320px) {
@@ -112,79 +116,60 @@ body {
   @media screen {
     margin: 0;
     background-color: var(--page-background-color);
-    min-height: 100%;
+    flex: 1 0 100%;
+    display: flex;
+    place-items: stretch;
+    height: 100%;
     overflow-y: scroll;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
   }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    display: grid;
-    row-gap: 1rem;
-    grid-template-columns: var(--safe-area-left) 1fr var(--safe-area-right);
-  }
-
-  @media screen and (min-width: 48rem) {
-    display: grid;
-    grid-template-columns: var(--safe-area-left) 15rem 1fr var(
-        --safe-area-right
-      );
-    grid-template-rows: 100vh 1fr;
-    grid-template-rows: 100dvh 1fr;
-    column-gap: 1rem;
-  }
-
-  @media screen and (min-width: 72rem) {
-    column-gap: 0;
-    grid-template-columns:
-      1fr var(--safe-area-left) 1rem 15rem 1rem 37rem 1rem var(
-        --safe-area-right
-      )
-      1fr;
-  }
 }
 
 .container {
-  @media screen and (max-width: calc(48rem - 1px)) {
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-column: 1 / -1;
-    row-gap: 1rem;
-    grid-auto-flow: column;
-
-    body:has(.menu-button[aria-expanded="true"]) & {
-      grid-template-rows: auto auto 1fr 0;
-    }
-  }
+  flex: 1 0 auto;
+  display: grid;
+  grid-template-rows: var(--header-height) auto auto;
+  gap: 1rem;
+  overflow: hidden;
+  width: 100%;
+  height: max-content;
 
   @media screen and (min-width: 48rem) {
-    display: grid;
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    grid-template-columns: subgrid;
-    grid-template-rows: auto 1fr 0;
-    height: 100%;
-    row-gap: 1rem;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    pointer-events: none;
+    grid-template-columns: var(--sidebar-width) 1fr;
+    grid-template-rows: var(--header-height) auto;
   }
 }
 
 .page-header {
   @media screen {
     grid-column: 1 / -1;
-    grid-row: 1 / 2;
     display: flex;
     background-color: var(--header-background-color);
     place-content: center;
     padding: 1rem;
     padding-left: var(--safe-area-left);
-    padding-right: var(--safe-area-right);
-    pointer-events: auto;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+}
+
+.page-heading {
+  @media screen {
+    margin: 0;
+    letter-spacing: 0.15rem;
+    line-height: 1.25;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+  }
+
+  &:focus-visible {
+    outline: 4px dashed white;
   }
 }
 
@@ -193,6 +178,8 @@ menu-button {
 }
 
 .menu-button {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
   cursor: pointer;
   display: flex;
   place-content: center;
@@ -217,15 +204,6 @@ menu-button {
 
   @media screen and (max-width: 320px) {
     flex-wrap: wrap;
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    grid-column: 2 / 3;
-  }
-
-  @media screen and (min-width: 48rem) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
   }
 
   @media print {
@@ -269,36 +247,15 @@ menu-button {
   transform: scale(1.75);
 }
 
-.page-heading {
-  @media screen {
-    margin: 0;
-    font-size: 0.9rem;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-    line-height: 1.5;
-    color: white;
-  }
-
-  &:focus-visible {
-    outline: 4px dashed white;
-  }
-}
-
 nav {
-  @media screen {
-    font-size: 0.9rem;
-  }
-
   @media screen and (max-width: calc(48rem - 1px)) {
-    grid-column: 2 / 3;
     grid-row: 3 / 4;
-    width: calc(100% + 10px);
-    left: -5px;
-    top: -5px;
-    position: relative;
-    max-height: calc(100% - 1rem);
+    grid-column: 1 / -1;
+    max-width: 100%;
+    width: var(--sidebar-width);
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: var(--safe-area-left);
 
     body:has(.menu-button[aria-expanded="false"]) & {
       display: none;
@@ -306,31 +263,17 @@ nav {
   }
 
   @media screen and (min-width: 48rem) {
-    height: calc(100% + 5px);
-    grid-column: 2 / 3;
+    overflow-y: scroll;
+    height: 100%;
     grid-row: 2 / 3;
-    overflow: hidden;
-    margin: -5px;
-    width: calc(100% + 10px);
-    position: relative;
-    pointer-events: auto;
-
-    &:after {
-      content: "";
-      background-image: linear-gradient(
-        0deg,
-        var(--page-background-color) 0%,
-        transparent 1rem
-      );
-      z-index: 1;
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-    }
-  }
-
-  @media screen and (min-width: 72rem) {
-    grid-column: 4 / 5;
+    grid-column: 1 / 2;
+    position: fixed;
+    top: var(--header-height);
+    width: var(--sidebar-width);
+    max-height: calc(100vh - var(--header-height));
+    max-height: calc(100dvh - var(--header-height));
+    border-right: 1px solid gray;
+    padding-left: var(--safe-area-left);
   }
 
   @media print {
@@ -338,42 +281,34 @@ nav {
   }
 }
 
-.nav__inner-container {
-  @media screen and (min-width: 48rem) {
-    width: calc(100% + var(--scrollbar-width, 1rem));
-    overflow-y: scroll;
-    height: calc(100% + 5px);
-  }
-}
-
 .nav__list {
   @media screen {
     display: grid;
     row-gap: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   @media screen and (max-width: calc(48rem - 1px)) {
-    max-height: calc(100% - 5px);
-    margin: 5px 5px 0 5px;
-
     body:has(.menu-button:not([aria-expanded="true"])) & {
       display: none;
     }
   }
 
   @media screen and (min-width: 48rem) {
-    margin: 5px;
+    padding-top: 1rem;
     padding-bottom: 1rem;
   }
 }
 
 main {
+  @media screen {
+    font-size: 1.125rem;
+  }
+
   @media screen and (max-width: calc(48rem - 1px)) {
+    grid-row: 3 / 4;
     grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: 1fr 0;
-    row-gap: 1rem;
 
     body:has(.menu-button[aria-expanded="true"]) & {
       display: none;
@@ -381,30 +316,8 @@ main {
   }
 
   @media screen and (min-width: 48rem) {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: auto 1fr 0;
-    row-gap: 1rem;
-  }
-
-  @media screen and (min-width: 72rem) {
-    grid-column: 6 / 7;
-  }
-
-  & .page-header {
-    @media screen and (max-width: calc(48rem - 1px)) {
-      display: none;
-    }
-
-    @media screen and (min-width: 48rem) {
-      visibility: hidden;
-    }
-
-    @media print {
-      display: none;
-    }
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
   }
 }
 
@@ -497,7 +410,6 @@ body:has(.content),
 .nav__list-item__definition {
   @media screen {
     padding: 0 1rem 1rem;
-    font-size: 0.85rem;
     margin: 0;
   }
 }
@@ -534,24 +446,18 @@ body:has(.content),
 .content {
   @media screen {
     line-height: 1.5;
-    border-radius: 0.5rem;
-    border: 2px solid var(--dark-color, black);
-    background-color: var(--page-background-color);
-  }
-
-  @media screen and (max-width: calc(48rem - 1px)) {
-    padding: 1rem;
-    grid-column: 2 / 3;
+    padding: 0 max(1rem, var(--safe-area-right)) 0 1rem;
   }
 
   @media screen and (min-width: 48rem) {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    padding: 2rem;
+    padding: 1rem max(1rem, var(--safe-area-right)) 1rem 1rem;
   }
 
-  @media screen and (min-width: 72rem) {
-    grid-column: 6 / 7;
+  @media screen and (min-width: 76rem) {
+    padding: 3rem max(1rem, var(--safe-area-right)) 3rem 1rem;
+    max-width: 52rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -572,15 +478,6 @@ body:has(.content),
   @media screen {
     display: flex;
     margin-bottom: 1rem;
-
-    &:has(.content__close-button) {
-      flex-direction: row-reverse;
-      gap: 1rem;
-
-      @media screen and (max-width: 320px) {
-        flex-wrap: wrap;
-      }
-    }
   }
 }
 
@@ -591,7 +488,6 @@ body:has(.content),
   column-gap: 0.5rem;
   row-gap: 1rem;
   margin-bottom: 0.5rem;
-  margin-top: 1rem;
 }
 
 .content__tags {
@@ -607,13 +503,13 @@ body:has(.content),
     border-radius: 0.5rem;
     font-weight: bold;
     font-size: 0.8rem;
-    border: 2px solid var(--dark-color);
-    background-color: var(--dark-color);
-    color: white;
+    border: 2px solid var(--medium-color);
+    background-color: var(--lightest-color);
+    color: var(--darkest-color);
 
     &:hover {
-      background-color: var(--lightest-color);
-      color: black;
+      background-color: var(--dark-color);
+      color: white;
     }
   }
 }
@@ -642,39 +538,6 @@ body:has(.content),
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
-
-  @media print {
-    display: none;
-  }
-}
-
-.content__close-button {
-  margin: 0;
-  padding: 0;
-  cursor: pointer;
-  font: inherit;
-  line-height: 1.75;
-  height: 1.75rem;
-  width: 1.75rem;
-  border-radius: 50%;
-  display: flex;
-  place-items: center;
-  place-content: center;
-  place-self: flex-start;
-  aspect-ratio: 1;
-  border: 2px solid var(--dark-color);
-  color: var(--lightest-color);
-  background-color: var(--dark-color);
-
-  &:hover {
-    background: none;
-    color: var(--dark-color);
-  }
-
-  & svg {
-    stroke: currentColor;
-    stroke-width: 2px;
-  }
 
   @media print {
     display: none;
