--- a/styles/base.css
+++ b/styles/base.css
@@ -105,7 +105,6 @@ abbr[title] {
     --safe-area-right: env(safe-area-inset-right, 0px);
     --header-background-color: #252525;
     --page-background-color: white;
-    --header-height: calc(2rem + (1.25 * 1rem));
     --sidebar-width: 16rem;
     --sidebar-width: max(16rem, calc(2rem + 30rch));
   }
@@ -135,13 +134,18 @@ body {
 
 .container {
   flex: 1 0 100%;
-  display: grid;
-  grid-template-rows: var(--header-height) auto auto;
-  gap: 1rem;
+  min-height: 100%;
   height: max-content;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  column-gap: 1rem;
+
+  @media screen and (max-width: calc(48rem - 1px)) {
+    row-gap: 1rem;
+    grid-template-rows: auto auto 1fr;
+  }
 
   @media screen and (min-width: 48rem) {
     grid-template-columns: var(--sidebar-width) 1fr;
-    grid-template-rows: var(--header-height) auto;
   }
 }
