--- a/styles/header.css
+++ b/styles/header.css
@@ -1,27 +1,3 @@
-.page-header {
-  @media screen {
-    grid-column: 1 / -1;
-    display: flex;
-    background-color: var(--header-background-color);
-    place-content: center;
-    padding: 1rem;
-    padding-left: max(1rem, var(--safe-area-left));
-    padding-right: max(1rem, var(--safe-area-right));
-    width: 100%;
-    z-index: 1;
-    border-bottom: 1px solid transparent;
-  }
-
-  @media screen and (min-width: 48rem) {
-    position: sticky;
-    top: 0;
-  }
-
-  @media (forced-colors: active) {
-    border-bottom: 1px solid;
-  }
-}
-
 .page-heading {
   @media screen {
     margin: 0;
@@ -30,6 +6,7 @@
     text-transform: uppercase;
     font-weight: bold;
     align-self: center;
+    color: canvas;
   }
 
   @media screen and (width > 720px) {
