--- a/styles/base.css
+++ b/styles/base.css
@@ -90,20 +90,14 @@ abbr[title] {
 }
 
 :root {
+  color-scheme: dark;
   display: grid;
   font-size: calc((18 / 16) * 100%);
   height: 100%;
+  line-height: 1.5;
   overflow: hidden;
   overscroll-behavior: none;
   font-family: system-ui, sans-serif;
-  --safe-area-left: 0px;
-  --safe-area-right: 0px;
-  --safe-area-left: env(safe-area-inset-left, 0px);
-  --safe-area-right: env(safe-area-inset-right, 0px);
-  --header-background-color: #252525;
-  --page-background-color: white;
-  --sidebar-width: 16rem;
-  --sidebar-width: max(16rem, calc(2rem + 30rch));
 
   @media (max-width: 320px) {
     -webkit-hyphens: auto;
@@ -118,11 +112,12 @@ body {
   overscroll-behavior: none;
 
   @media screen {
-    background-color: var(--page-background-color);
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
+    background-color: canvas;
+    color: canvastext;
   }
 }
 
@@ -140,7 +135,7 @@ body {
 
 .top,
 .bottom {
-  background: #ddd;
+  background: rgb(208, 173, 240);
 }
 
 .top,
@@ -158,6 +153,11 @@ body {
 .main {
   padding: 1rem;
   padding-right: calc(1rem + env(safe-area-inset-right));
+
+  @container (width > 720px) {
+    padding: 3rem;
+    padding-right: calc(3rem + env(safe-area-inset-right));
+  }
 }
 
 .top {
@@ -239,8 +239,7 @@ body {
 .switch {
   padding: 1rem;
   cursor: pointer;
-  border: 1px solid #ddd;
-  background-color: deepskyblue;
+  border: 4px solid canvas;
   border-radius: 5px;
   text-align: center;
   display: flex;
@@ -262,8 +261,4 @@ body {
 
 menu-visibility-switch {
   display: contents;
-}
-
-.menu {
-  background-color: #f8f9fa;
 }
